--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
         <h1>¡Feliz Día de San Valentín!</h1>
         <div class="message-card">
             <div class="message">
-                Querido/a [Nombre],<br><br>
-                En este día tan especial, quiero que sepas cuánto significas para mí. Tu amor ilumina mis días y llena mi corazón de alegría. Espero que este Día de San Valentín esté lleno de amor y felicidad para ti.<br><br>
-                Con todo mi cariño,<br>
-                [Tu Nombre]
+                Montserrat,<br><br>
+                Para mí, eres una chica hermosa en todos los sentidos. Eres inteligente, graciosa… La verdad, me encantas.<br>
+                En el poco tiempo que hemos hablado, has logrado , y me gustaría llegar a formar una relación muy bonita contigo.,<br>
+                Hoy se me ocurrieron muchas cosas para hacer, pero, lamentablemente, no sucedieron. Aun así, quería darte un poco de mí.<br>
+                Sé que es algo sencillo, pero eso no refleja lo perdidamente impresionado que estoy por lo perfecta que eres.<br>
             </div>
         </div>
-        <div class="footer">❤️ Siempre en mi corazón ❤️</div>
+        <div class="footer">❤️ Te quiero ❤️</div>
     </div>
 
     <script>
