--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="message">
                 Montserrat,<br><br>
                 Para mí, eres una chica hermosa en todos los sentidos. Eres inteligente, graciosa… La verdad, me encantas.<br>
-                En el poco tiempo que hemos hablado, has logrado , y me gustaría llegar a formar una relación muy bonita contigo.,<br>
+                En el poco tiempo que hemos hablado, me has hecho enamorarme, y me gustaría llegar a formar una relación muy bonita contigo.,<br>
                 Hoy se me ocurrieron muchas cosas para hacer, pero, lamentablemente, no sucedieron. Aun así, quería darte un poco de mí.<br>
                 Sé que es algo sencillo, pero eso no refleja lo perdidamente impresionado que estoy por lo perfecta que eres.<br>
             </div>
